photos extension changed

--- a/app.css
+++ b/app.css
@@ -10,7 +10,7 @@ body{
     box-sizing: border-box;
     background-color:seagreen;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: url("back5.jpg");
+    background: url("back5.webp");
     background-size: cover;
     background-position: right;
     color: black;
